--- a/hu_wuhu_rn.adoc
+++ b/hu_wuhu_rn.adoc
@@ -28,15 +28,15 @@ For specific information about the operating system versions and updates that th
 
 == Known problems and limitations
 
-You should be aware of the following known problems and limitations that might impact performance on your specific host. A few unexpected and potentially undesired behaviors, as well as, in some cases, workarounds to avoid these behaviors, have been identified in the 7.1 release. 
+You should be aware of the following known problems and limitations that might impact performance on your specific host. A few unexpected and potentially undesired behaviors, and workarounds to avoid these behaviors, have been identified in the Windows Unified Host Utilities 7.1 release. 
 
 [cols=3,options="header", cols= "30, 30, 20"]
 |===
 |Title	|Description |Workaround
-|Running the `linux_gos_timeout-install.sh` script is no longer required on Hyper-V guests running Red Hat Enterprise Linux or SUSE Linux Enterprise Server |You are no longer required to run the `linux_gos_timeout-install.sh` script to change disk timeouts on Red Hat Enterprise Linux 5, Red Hat Enterprise Linux 6, or SUSE Linux Enterprise Server 11 Hyper-V guests because the default timeout settings are being used. The `linux_gos_timeout-install.sh` script that was included in previous versions of the Host Utilities is no longer included in the Windows Unified Host Utilities. Windows Unified Host Utilities 7.1 uses the default disk timeout settings.|Not Applicable
+|Running the `linux_gos_timeout-install.sh` script is no longer required on Hyper-V guests running Red Hat Enterprise Linux or SUSE Linux Enterprise Server |You are no longer required to run the `linux_gos_timeout-install.sh` script to change disk timeouts on Red Hat Enterprise Linux 5, Red Hat Enterprise Linux 6, or SUSE Linux Enterprise Server 11 Hyper-V guests because the default timeout settings are being used. The `linux_gos_timeout-install.sh` script that was included in previous versions of the Host Utilities is no longer included in the Windows Unified Host Utilities 7.1 version. Windows Unified Host Utilities 7.1 uses the default disk timeout settings.|Not Applicable
 |iSCSI sessions do not reconnect after reboot with mixed IPv4 and IPv6 |In a multipath I/O (MPIO) configuration or multiple connections per session (MCS) configuration that has both IPv4 and IPv6 endpoints, some iSCSI sessions might fail to reconnect after rebooting the Windows host.
-|To verify that all of your iSCSI paths return after a reboot, use either all IPv4 endpoints or all IPv6. Do not mix IPv4 and IPv6.
-|MCS is not supported with iSCSI software boot |When using iSCSI software boot with iSCSI multiple connections per session (MCS), the iSCSI boot leading connection cannot be protected. This can lead to disconnection from the boot LUN causing the host to crash.
+|To verify that all of your iSCSI paths are operational after a reboot, use either all IPv4 endpoints or all IPv6. Do not mix IPv4 and IPv6.
+|MCS is not supported with iSCSI software boot |When using the iSCSI software boot with iSCSI multiple connections per session (MCS), the iSCSI boot leading connection cannot be protected. This can lead to disconnection from the boot LUN causing host system disruption.
 |Microsoft does not support MCS for iSCSI software booted hosts. Use MPIO as the high availability solution. Note that mixing MPIO and MCS is not supported.
 |===
 
