--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -19,6 +19,12 @@ summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 
 [.lead]
 NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and other transports, is supported with SUSE Linux Enterprise Server (SLES) 15 SP4 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FCP environments and is implemented with in-kernel NVMe multipath.
 
+The following support is available for the NVMe-oF host configuration for SLES 15 SP4 with ONTAP:
+
+*	Both NVMe and SCSI traffic can be run on the same co-existent host. Therefore, for SCSI LUNs you can configure dm-multipath for SCSI mpath devices, whereas NVMe multipath can be used to configure NVMe-oF namespace devices on the host.
+
+* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native nvme-cli package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
+
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
 == Features
@@ -28,7 +34,9 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Known limitations
 
-SAN booting using the NVMe-oF protocol is currently not supported.
+* SAN booting using the NVMe-oF protocol is currently not supported.
+
+* There's no sanlun support for NVMe-oF therefore, the host utility support isn't available for NVMe-oF on an SLES15 SP5 host. You can rely on the NetApp plug-in included in the native nvme-cli package for all NVMe-oF transports.
 
 == Configure NVMe/FC
 
@@ -244,18 +252,19 @@ You can use the following procedure to configure NVMe/TCP.
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
 ----
-nvme discover -t tcp -w host-traddr -a traddr
+nvme discover -t tcp -w <host-traddr> -a <traddr>
 ----
 +
 *Example output*:
 +
+[subs=+quotes]
 ----
 # nvme discover -t tcp -w 192.168.1.4 -a 192.168.1.31
 
 Discovery Log Number of Records 8, Generation counter 18
 =====Discovery Log Entry 0====== trtype: tcp
 adrfam: ipv4
-subtype: current discovery subsystem treq: not specified
+subtype: *current discovery subsystem* treq: not specified
 portid: 0
 trsvcid: 8009 subnqn: nqn.1992-
 08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery traddr: 192.168.2.117
@@ -266,22 +275,22 @@ subtype: current discovery subsystem treq: not specified
 portid: 1
 trsvcid: 8009 subnqn: nqn.1992-
 08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery traddr: 192.168.1.117
-eflags: explicit discovery connections, duplicate discovery information sectype: none
+eflags: *explicit discovery connections, duplicate discovery information sectype: none*
 =====Discovery Log Entry 2====== trtype: tcp
 adrfam: ipv4
-subtype: current discovery subsystem treq: not specified
+subtype: *current discovery subsystem* treq: not specified
 portid: 2
 trsvcid: 8009 subnqn: nqn.1992-
 08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery traddr: 192.168.2.116
-eflags: explicit discovery connections, duplicate discovery information
-sectype: none
+eflags: *explicit discovery connections, duplicate discovery information
+sectype: none*
 =====Discovery Log Entry 3====== trtype: tcp
 adrfam: ipv4
-subtype: current discovery subsystem treq: not specified
+subtype: *current discovery subsystem* treq: not specified
 portid: 3
 trsvcid: 8009 subnqn: nqn.1992-
 08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery traddr: 192.168.1.116
-eflags: explicit discovery connections, duplicate discovery information sectype: none
+eflags: *explicit discovery connections, duplicate discovery information sectype: none*
 =====Discovery Log Entry 4====== trtype: tcp
 adrfam: ipv4
 subtype: nvme subsystem treq: not specified portid: 0
@@ -311,7 +320,7 @@ traddr: 192.168.1.116 eflags: not specified sectype: none
 . Verify that all other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data: 
 +
 ----
-nvme discover -t tcp -w host-traddr -a traddr
+nvme discover -t tcp -w <host-traddr> -a <traddr>
 ----
 +
 *Example*
@@ -501,59 +510,61 @@ Beginning with ONTAP 9.11.1, you can create a persistent discovery controller (P
 . Verify that the discovery log page data is available and can be retrieved through the initiator port - target LIF combination:
 +
 ----
-nvme discover -t trtype -w host-traddr -a traddr
+nvme discover -t <trtype> -w <host-traddr> -a <traddr>
 ----
 
 +
+
 .Example output:
 [%collapsible]
 ====
+[subs=+quotes]
 ----
 Discovery Log Number of Records 16, Generation counter 14
 =====Discovery Log Entry 0======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  0
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0501daf15dda11eeab68d039eaa7a232:discovery
 traddr:  192.168.1.214
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 1======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  0
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0501daf15dda11eeab68d039eaa7a232:discovery
 traddr:  192.168.1.215
-eflags:  explicit discovery connections, duplicate discovery information
-sectype: none
+eflags:  *explicit discovery connections, duplicate discovery information
+sectype: none*
 =====Discovery Log Entry 2======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  0
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0501daf15dda11eeab68d039eaa7a232:discovery
 traddr:  192.168.2.215
-eflags:  explicit discovery connections, duplicate discovery information
-sectype: none
+eflags:  *explicit discovery connections, duplicate discovery information
+sectype: none*
 =====Discovery Log Entry 3======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  0
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0501daf15dda11eeab68d039eaa7a232:discovery
 traddr:  192.168.2.214
-eflags:  explicit discovery connections, duplicate discovery information
-sectype: none
+eflags:  *explicit discovery connections, duplicate discovery information
+sectype: none*
 =====Discovery Log Entry 4======
 trtype:  tcp
 adrfam:  ipv4
@@ -692,7 +703,7 @@ sectype: none
 . Create a PDC for the discovery subsystem: 
 +
 ----
-nvme discover -t trtype -w host-traddr -a traddr -p
+nvme discover -t <trtype> -w <host-traddr> -a <traddr> -p
 ----
 +
 *Example*
@@ -709,10 +720,11 @@ vserver nvme show-discovery-controller -instance -vserver vserver_name
 +
 *Example output:*
 +
+[subs=+quotes]
 ----
 vserver nvme show-discovery-controller -instance -vserver vs_nvme175
 Vserver Name: vs_CLIENT116 Controller ID: 00C0h
-Discovery Subsystem NQN: nqn.1992- 08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery Logical Interface UUID: d23cbb0a-c0a6-11ec-9731-d039ea165abc Logical Interface: CLIENT116_lif_4a_1
+Discovery Subsystem NQN: *nqn.1992- 08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery* Logical Interface UUID: d23cbb0a-c0a6-11ec-9731-d039ea165abc Logical Interface: CLIENT116_lif_4a_1
 Node: A400-14-124
 Host NQN: nqn.2014-08.org.nvmexpress:uuid:12372496-59c4-4d1b-be09- 74362c0c1afc
 Transport Protocol: nvme-tcp
@@ -818,11 +830,10 @@ DHHC-1:03:WorVEV83eYO53kV4Iel5OpphbX5LAphO3F8fgH3913tlrkSGDBJTt3crXeTUB8fCwGbPsE
 
 .JSON file
 --
-You can use the config.json file in conjunction with `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
+You can use the `/etc/nvme/config.json` file in conjunction with `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
 
 You can generate the JSON file using -o option. Refer to the man pages for more syntax options.
 
-Note that `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`. 
 
 .Steps
 
@@ -876,6 +887,9 @@ Note that `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corr
    ]
  }
 ]
+
+[NOTE]
+In the preceding example, `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`. 
 ----
 
 . Connect to the ONTAP controller using the config JSON file.
