--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -21,7 +21,7 @@ NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and oth
 
 The following support is available for the NVMe-oF host configuration for SLES 15 SP4 with ONTAP:
 
-*	Both NVMe and SCSI traffic can be run on the same co-existent host. Therefore, for SCSI LUNs you can configure dm-multipath for SCSI mpath devices, whereas NVMe multipath can be used to configure NVMe-oF namespace devices on the host.
+*	Both NVMe and SCSI traffic can be run on the same co-existent host. Therefore, for SCSI LUNs, you can configure dm-multipath for SCSI mpath devices, whereas you might use NVMe multipath to configure NVMe-oF namespace devices on the host.
 
 * Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native nvme-cli package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 
@@ -75,7 +75,7 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 
-. Verify that you are using the recommended Emulex HBA firmware versions:
+. Verify that you are using the recommended Emulex host bus adapter (HBA) firmware versions:
 +
 ----
 cat /sys/class/scsi_host/host*/fwrev 
@@ -214,7 +214,7 @@ Created symlink /etc/systemd/system/default.target.wants/nvmf-autoconnect.servic
 ----
 
 . Reboot the host. 
-. Verify that `nvmf-autoconnect.service` and `nvmefc-boot-connections.service` are running after system boot up. 
+. Verify that `nvmf-autoconnect.service` and `nvmefc-boot-connections.service` are running after the system boots up: 
 +
 *Example*
 +
@@ -347,7 +347,7 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l <ctrl_loss_timeout_in_second
 ----
 +
 [NOTE]
-NetApp recommends setting the `ctrl-loss-tmo` option to `-1` so that the NVMe/TCP initiator attempts to try to reconnect indefinitely in the event of a path loss.
+NetApp recommends setting the `ctrl-loss-tmo` option to `-1` so that the NVMe/TCP initiator attempts to reconnect indefinitely in the event of a path loss.
 
 == Validate NVMe-oF
 
@@ -514,7 +514,6 @@ nvme discover -t <trtype> -w <host-traddr> -a <traddr>
 ----
 
 +
-
 .Example output:
 [%collapsible]
 ====
@@ -712,7 +711,7 @@ nvme discover -t <trtype> -w <host-traddr> -a <traddr> -p
 nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116 -p
 ----
 
-. From the ONTAP controller, validate that the PDC is created:
+. From the ONTAP controller, verify that the PDC is created:
 +
 ----
 vserver nvme show-discovery-controller -instance -vserver vserver_name
@@ -742,7 +741,7 @@ Beginning with ONTAP 9.12.1 and later, secure, in-band authentication is support
 To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. In order for an NVMe host or controller to authenticate its peer, it must recognize the key associated with the peer. 
 
 
-You can set up secure in-band authentication using the CLI or using a config JSON file. If you need to specify different dhcap keys for different subsystems, then you must use a config JSON file. 
+You can set up secure in-band authentication using the CLI or using a config JSON file. If you need to specify different dhchap keys for different subsystems, then you must use a config JSON file. 
 
 [role="tabbed-block"]
 ====
@@ -772,20 +771,20 @@ nvme gen-dhchap-key -s optional_secret -l key_length {32|48|64} -m HMAC_function
 +
 *Example*:
 +
-In the following example, a random `dhchap` key with HMAC set to 3 (SHA-512) is generated.
+In the following example, a random dhchap key with HMAC set to 3 (SHA-512) is generated.
 +
 ----
 # nvme gen-dhchap-key -m 3 -n nqn.2014-08.org.nvmexpress:uuid:d3ca725a- ac8d-4d88-b46a-174ac235139b
 DHHC-1:03:J2UJQfj9f0pLnpF/ASDJRTyILKJRr5CougGpGdQSysPrLu6RW1fGl5VSjbeDF1n1DEh3nVBe19nQ/LxreSBeH/bx/pU=:
 ----
 
-. On the ONTAP controller, add the host and specify both `dhchap` keys:
+. On the ONTAP controller, add the host and specify both dhchap keys:
 +
 ----
 vserver nvme subsystem host add -vserver <svm_name> -subsystem <subsystem> -host-nqn <host_nqn> -dhchap-host-secret <authentication_host_secret> -dhchap-controller-secret <authentication_controller_secret> -dhchap-hash-function {sha-256|sha-512} -dhchap-group {none|2048-bit|3072-bit|4096-bit|6144-bit|8192-bit}
 ----
 
-. A host supports two types of authentication methods - unidirectional and bidirectional. On the host, connect to  the ONTAP controller and specify dhchap keys based on the chosen authentication method:
+. A host supports two types of authentication methods - unidirectional and bidirectional. On the host, connect to the ONTAP controller and specify dhchap keys based on the chosen authentication method:
 
 +
 ----
@@ -832,7 +831,7 @@ DHHC-1:03:WorVEV83eYO53kV4Iel5OpphbX5LAphO3F8fgH3913tlrkSGDBJTt3crXeTUB8fCwGbPsE
 --
 You can use the `/etc/nvme/config.json` file in conjunction with `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
 
-You can generate the JSON file using -o option. Refer to the man pages for more syntax options.
+You can generate the JSON file using `-o` option. Refer to the ONTAP man pages for more syntax options.
 
 
 .Steps
@@ -892,7 +891,7 @@ You can generate the JSON file using -o option. Refer to the man pages for more 
 In the preceding example, `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`. 
 ----
 
-. Connect to the ONTAP controller using the config JSON file.
+. Connect to the ONTAP controller using the config JSON file:
 +
 ----
 nvme connect-all -J /etc/nvme/config.json
@@ -915,7 +914,7 @@ traddr=192.168.2.117 is already connected
 traddr=192.168.1.117 is already connected
 ----
 
-. Verify that the dhcap secrets have been enabled for the respective controllers for each subsystem:
+. Verify that the dhchap secrets have been enabled for the respective controllers for each subsystem:
 +
 *Verify the host dhchap keys*
 +
@@ -946,7 +945,7 @@ DHHC-1:03:2YJinsxa2v3+m8qqCiTnmgBZoH6mIT6G/6f0aGO8viVZB4VLNLH4z8CvK7pVYxN6S5fOAt
 
 == Known issues 
 
-There are no known issues. 
+There are no known issues for the SLES 15 SP4 with ONTAP release. 
 
 //BURT 1529116 30 Jan 2023
 //JIRA 1164 31 Aug 2023
