--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -825,7 +825,7 @@ DHHC-1:03:WorVEV83eYO53kV4Iel5OpphbX5LAphO3F8fgH3913tlrkSGDBJTt3crXeTUB8fCwGbPsE
 
 .JSON file
 --
-You can use the `/etc/nvme/config.json` file in conjunction with `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
+You can use the `/etc/nvme/config.json` file in conjunction with the `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
 
 You can generate the JSON file using `-o` option. Refer to the ONTAP man pages for more syntax options.
 
