--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -29,14 +29,14 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Features
 
-* Support for NVMe secure, in-band authentication.
-* Support for persistent discovery controllers (PDCs) using a unique discovery NQN.
+* Support for NVMe secure, in-band authentication
+* Support for persistent discovery controllers (PDCs) using a unique discovery NQN
 
 == Known limitations
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
-* There's no sanlun support for NVMe-oF therefore, the host utility support isn't available for NVMe-oF on an SLES15 SP5 host. You can rely on the NetApp plug-in included in the native nvme-cli package for all NVMe-oF transports.
+* There's no sanlun support for NVMe-oF. Therefore, the host utility support isn't available for NVMe-oF on an SLES15 SP5 host. You can rely on the NetApp plug-in included in the native nvme-cli package for all NVMe-oF transports.
 
 == Configure NVMe/FC
 
@@ -55,7 +55,7 @@ You can configure NVMe/FC for Broadcom/Emulex FC adapters or Marvell/Qlogic FC a
 cat /sys/class/scsi_host/host*/modelname
 ----
 +
-Example output:
+*Example output*:
 +
 ----
 LPe32002 M2
@@ -179,7 +179,7 @@ FCP CMPL: xb 0000159d Err 000135c3
 cat /sys/class/fc_host/host*/symbolic_name 
 ----
 +
-Example output:
+*Example output*:
 +
 ----
 QLE2742 FW:v9.08.02 DVR:v10.02.07.800-k QLE2742 FW:v9.08.02 DVR:v10.02.07.800-k
@@ -316,7 +316,7 @@ trsvcid: 4420 subnqn: nqn.1992-
 traddr: 192.168.1.116 eflags: not specified sectype: none
 ----
 
-. Verify that all other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data: 
+. Verify that all other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
 +
 ----
 nvme discover -t tcp -w <host-traddr> -a <traddr>
@@ -454,7 +454,7 @@ iopolicy=round-robin
 --
 ====
 
-. Verify that the NetApp plug-in displays correct values for each ONTAP namespace device: 
+. Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device: 
 +
 [role="tabbed-block"]
 ====
@@ -464,7 +464,7 @@ iopolicy=round-robin
 
 `nvme netapp ontapdevices -o column`
 
-Example output: 
+*Example output*: 
 
 ----
 
@@ -480,7 +480,7 @@ Device           Vserver                   Namespace Path                       
 
 `nvme netapp ontapdevices -o json`
 
-Example output:
+*Example output*:
 ----
 {
   "ONTAPdevices":[
@@ -502,11 +502,11 @@ Example output:
 
 == Discovery enhancements
 
-Beginning with ONTAP 9.11.1, you can create a persistent discovery controller (PDC) for your SLES 15 SP4 host. A PDC is required to automatically detect NVMe subsystem add or remove scenarios and changes to the discovery log page data. You can use the following procedure to create a PDC.
+Beginning with ONTAP 9.11.1, you can create a persistent discovery controller (PDC) for your SLES 15 SP4 host by using the following procedure. A PDC is required to automatically detect NVMe subsystem add or remove scenarios and changes to the discovery log page data. 
 
 .Steps
 
-. Verify that the discovery log page data is available and can be retrieved through the initiator port - target LIF combination:
+. Verify that the discovery log page data is available and can be retrieved through the initiator port and target LIF combination:
 +
 ----
 nvme discover -t <trtype> -w <host-traddr> -a <traddr>
@@ -701,13 +701,13 @@ sectype: none
 nvme discover -t <trtype> -w <host-traddr> -a <traddr> -p
 ----
 +
-*Example*
+*Example output:*
 +
 ----
 nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116 -p
 ----
 
-. From the ONTAP controller, verify that the PDC is created:
+. From the ONTAP controller, verify that the PDC has been created:
 +
 ----
 vserver nvme show-discovery-controller -instance -vserver vserver_name
@@ -732,12 +732,12 @@ Vserver UUID: 48391d66-c0a6-11ec-aaa5-d039ea165514
 
 == Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1 and later, secure, in-band authentication is supported over NVMe/TCP and NVMe/FC between your SLES 15 SP4 host and your ONTAP controller.
+Beginning with ONTAP 9.12.1, secure, in-band authentication is supported over NVMe/TCP and NVMe/FC between your SLES 15 SP4 host and your ONTAP controller.
 
-To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. In order for an NVMe host or controller to authenticate its peer, it must recognize the key associated with the peer. 
+To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key, which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
 
-You can set up secure in-band authentication using the CLI or using a config JSON file. If you need to specify different dhchap keys for different subsystems, then you must use a config JSON file. 
+You can set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
 
 [role="tabbed-block"]
 ====
@@ -765,7 +765,6 @@ nvme gen-dhchap-key -s optional_secret -l key_length {32|48|64} -m HMAC_function
 •	-n host NQN to use for key transformation
 ----
 +
-*Example*:
 +
 In the following example, a random dhchap key with HMAC set to 3 (SHA-512) is generated.
 +
@@ -780,7 +779,7 @@ DHHC-1:03:J2UJQfj9f0pLnpF/ASDJRTyILKJRr5CougGpGdQSysPrLu6RW1fGl5VSjbeDF1n1DEh3nV
 vserver nvme subsystem host add -vserver <svm_name> -subsystem <subsystem> -host-nqn <host_nqn> -dhchap-host-secret <authentication_host_secret> -dhchap-controller-secret <authentication_controller_secret> -dhchap-hash-function {sha-256|sha-512} -dhchap-group {none|2048-bit|3072-bit|4096-bit|6144-bit|8192-bit}
 ----
 
-. A host supports two types of authentication methods - unidirectional and bidirectional. On the host, connect to the ONTAP controller and specify dhchap keys based on the chosen authentication method:
+. A host supports two types of authentication methods, unidirectional and bidirectional. On the host, connect to the ONTAP controller and specify dhchap keys based on the chosen authentication method:
 
 +
 ----
@@ -789,7 +788,7 @@ nvme connect -t tcp -w <host-traddr> -a <tr-addr> -n <host_nqn> -S <authenticati
 
 . Validate the `nvme connect authentication` command by verifying the host and controller dhchap keys: 
 +
-*Verify the host dhchap keys*
+.. Verify the host dhchap keys:
 +
 ----
 $cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_secret
@@ -805,7 +804,7 @@ DHHC-1:03:je1nQCmjJLUKD62mpYbzlpuw0OIws86NB96uNO/t3jbvhp7fjyR9bIRjOHg8wQtye1JCFS
 DHHC-1:03:je1nQCmjJLUKD62mpYbzlpuw0OIws86NB96uNO/t3jbvhp7fjyR9bIRjOHg8wQtye1JCFSMkBQH3pTKGdYR1OV9gx00=:
 ----
 +
-*Verify the controller dhchap keys*
+.. Verify the controller dhchap keys:
 +
 ----
 $cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_ctrl_secret
@@ -825,14 +824,14 @@ DHHC-1:03:WorVEV83eYO53kV4Iel5OpphbX5LAphO3F8fgH3913tlrkSGDBJTt3crXeTUB8fCwGbPsE
 
 .JSON file
 --
-You can use the `/etc/nvme/config.json` file in conjunction with the `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
+You can use the `/etc/nvme/config.json` file with the `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
 
 You can generate the JSON file using `-o` option. Refer to the ONTAP man pages for more syntax options.
 
 
 .Steps
 
-. Configure the JSON file.
+. Configure the JSON file:
 +
 ----
 # cat /etc/nvme/config.json 
@@ -912,7 +911,7 @@ traddr=192.168.1.117 is already connected
 
 . Verify that the dhchap secrets have been enabled for the respective controllers for each subsystem:
 +
-*Verify the host dhchap keys*
+.. Verify the host dhchap keys:
 +
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_secret
@@ -924,7 +923,7 @@ traddr=192.168.1.117 is already connected
 DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
 ----
 +
-*Verify the controller dhchap keys*
+.. Verify the controller dhchap keys:
 +
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret
