--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -826,7 +826,7 @@ DHHC-1:03:WorVEV83eYO53kV4Iel5OpphbX5LAphO3F8fgH3913tlrkSGDBJTt3crXeTUB8fCwGbPsE
 --
 You can use the `/etc/nvme/config.json` file with the `nvme connect-all` command when multiple NVMe subsystems are available on the ONTAP controller configuration. 
 
-You can generate the JSON file using `-o` option. Refer to the link:https://docs.netapp.com/us-en/ontap/concepts/manual-pages.html[ONTAP man pages^] for more syntax options.
+You can generate the JSON file using `-o` option. Refer to the NVMe connect-all man pages for more syntax options.
 
 
 .Steps
