--- a/_include/windows/reuse_windows_installing_WUHU.adoc
+++ b/_include/windows/reuse_windows_installing_WUHU.adoc
@@ -1,1 +1,1 @@
-The Windows Unified Host Utilities (WUHU) are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. We recommend downloading and installation of the latest Utility Kit. For WUHU configuration information and instructions, please refer to link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html[WUHU 7.1 Documentation].
+The Windows Unified Host Utilities (WUHU) are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. We recommend downloading and installation of the latest Utility Kit. For WUHU configuration information and instructions, refer to link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_72.html[Windows Unified Host Utilities 7.2] documentation.
