--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -26,7 +26,7 @@ include::_include/windows/reuse_windows_san_booting.adoc[]
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 
-== Installing Windows hotfixes
+== Install Windows hotfixes
 We suggest the use of *latest cumulative update* to be installed on the server.
 
 NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2016[Microsoft Update Catalog 2016^] website to obtain and install the required Windows hotfixes for your version of Windows.
@@ -34,7 +34,7 @@ NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Upda
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
 
-== Installing the Windows Unified Host Utilities
+== Install the Windows Unified Host Utilities
 include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
 
