--- a/hu_windows_2022.adoc
+++ b/hu_windows_2022.adoc
@@ -16,20 +16,21 @@ summary: Using Windows Server 2022 with ONTAP
 
 [.lead]
 You can use the ONTAP SAN host configuration settings to configure Windows server 2022 with ONTAP as the target. 
+
 == Booting the OS
 include::_include/windows/reuse_windows_booting_OS.adoc[]
 
 === SAN booting
 include::_include/windows/reuse_windows_san_booting.adoc[]
 
-== Installing Windows hotfixes
+== Install Windows hotfixes
 We suggest the use of *latest cumulative update* to be installed on the server.
 
 NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=update%20%22windows%20server%202022%22[Microsoft Update Catalog 2022^] website to obtain and install the required Windows hotfixes for your version of Windows.
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
-== Installing the Windows Unified Host Utilities
+== Install the Windows Unified Host Utilities
 include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
 == Multipathing
