Windows fix issue 168

--- a/_include/windows/reuse_windows_recommended_settings.adoc
+++ b/_include/windows/reuse_windows_recommended_settings.adoc
@@ -21,4 +21,4 @@ For QLogic Fibre Channel HBAs:
 | PortDownRetryCount | 10
 |===
 
-NOTE: Windows Unified Host Utility will set these values. For detailed recommended settings, refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_72.html[Windows Host Utilities 7.2^] document.
+NOTE: Windows Unified Host Utility will set these values. For detailed recommended settings, refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_rn.html[Windows Host Utilities documentation] and select the installation procedure for your Windows Unified Host Utilities version.
